<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    >


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/Regi"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/et_style"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/etSap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/et_style"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/register_SapID"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/et_style"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/et_style"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/register_phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#000" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/help"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etblood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/blood_grp"
        android:background="@drawable/et_style"
        android:padding="7dp"
        android:textColorHint="#000"
        android:fontFamily="@font/roboto_slab"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etallergy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/et_style"
        android:textColorHint="#000"
        android:padding="7dp"
        android:ems="10"
        android:hint="@string/allergies"
        android:fontFamily="@font/roboto_slab"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etcondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:background="@drawable/et_style"
        android:textColorHint="#000"
        android:padding="7dp"
        android:hint="@string/heart_condition"
        android:fontFamily="@font/roboto_slab"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etlifestyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:background="@drawable/et_style"
        android:textColorHint="#000"
        android:padding="7dp"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/lifestyle"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/backgroud"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/btn_register"
        android:textColor="#fff" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/already_register"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/login"

            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>