<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_slab_thin" />

    <TextView
        android:id="@+id/shwdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="checking"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:gravity="center"
        android:text="@string/Logi"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_slab" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/et_style1"
        android:drawableLeft="@drawable/userlogo"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:gravity="start"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/et_style1"
        android:drawableLeft="@drawable/sapid"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#000" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="75dp"
        android:fontFamily="@font/roboto_slab"
        android:background="@drawable/backgroud"
        android:text="@string/btn_login"
        android:textColor="#fff"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="433dp"
        android:layout_height="148dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/not_register"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="95dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_slab"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>