<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dailydata">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="45dp"
        android:text="@string/hello_name"
        app:fontFamily="@font/roboto_slab"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="45dp"

        android:text="@string/day"
        android:textColor="#000"
        android:textSize="21sp"
        app:fontFamily="@font/roboto_slab" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="45dp"
        android:text="@string/todays_temperature"
        android:textColor="#000"
        android:textSize="17sp"
        app:fontFamily="@font/roboto_slab" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        android:text="37.5 °C/99.5 °F"
        app:fontFamily="@font/roboto_slab"
        android:textColor="#000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnGraph"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/backgroud"
        android:fontFamily="@font/roboto_slab"
        android:text="YOUR MONTHLY REVIEW"
        android:textColor="#fff" />

</LinearLayout>